create main header & slidebar

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,5 +1,2 @@
-.container{
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-}
+// import container.scss
+@import '../common/common.scss';
