--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,7 +1,6 @@
-@import "../common/container.scss";
+@import "../common/common.scss";
 // Top Header
 .top_header {
-  border: 1px solid #000000;
   background-color: #000000;
   height: 48px;
   .center_content {
@@ -16,7 +15,6 @@
     a {
       font-weight: 600;
       line-height: 24px;
-      text-decoration: none;
     }
     a,
     p,
@@ -36,76 +34,149 @@
     }
   }
 }
+.hr_header {
+  line-height: 0;
+  border-top: 0.5px solid #000;
+  opacity: 0.3;
+  margin-top: 0;
+}
+// Main Header
+.main_header {
+  position: sticky;
+  top: 0px;
+  z-index: 999;
+  padding-top: 1em;
+  background-color:#fafafa;
+  padding-bottom: 1em;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 1)
+  ;
+  .content_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .left_header {
+      width: 60%;
+      height: 38px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      ul {
+        display: flex;
+        li {
+          list-style: none;
+          &:not(:last-child) {
+            margin-right: 48px;
+          }
+        }
+      }
+    }
+    .right_header {
+      width: 40%;
+      height: 38px;
+      gap: 16px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .user {
+        position: relative;
+        .user_dropdown {
+          background-color: rgba(0, 0, 0, 0.3);
+          margin-top: 2px;
+          border-radius: 4px;
+          display: none;
+          white-space: nowrap;
+          text-align: start;
+          position: absolute;
+          right: 0;
+          ul {
+            margin: 0;
+            padding: 10px;
+            li {
+               
+              list-style: none;
+              &:not(:last-child) {
+                margin-bottom: 10px;
+              }
+              a{
+                color: rgba(250, 250, 250, 1);
+              }
+            }
+          }
+        }
+        .active_user_dropdown {
+          display: block;
+        }
+      }
+    }
+  }
+}
 
 // Media
 @media (max-width: 1600px) {
   .top_header {
     .center_content {
-        display: flex;
-        justify-content: flex-start;
+      display: flex;
+      justify-content: flex-start;
 
-        .bounce {
-            width: calc(100% - 110px);
-            height: 40px;
-            overflow: hidden;
-            position: relative;
-            left: 0;
-            p {
-                white-space: nowrap;
-                margin: 12px;
-                font-weight: 400;
-                line-height: 21px;
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                text-align: center;
-                -moz-transform: translateX(100%);
-                -webkit-transform: translateX(100%);
-                transform: translateX(100%);
-                -moz-animation: bouncing-text 5s linear infinite alternate;
-                -webkit-animation: bouncing-text 5s linear infinite alternate;
-                animation: bouncing-text 10s linear infinite alternate;
-                @-moz-keyframes bouncing-text {
-                    0% {
-                        -moz-transform: translateX(100%);
-                    }
-                    100% {
-                        -moz-transform: translateX(-100%);
-                    }
-                }
-                
-                @-webkit-keyframes bouncing-text {
-                    0% {
-                        -webkit-transform: translateX(100%);
-                    }
-        
-                    100% {
-                        -webkit-transform: translateX(-100%);
-                    }
-                }
-                
-                @keyframes bouncing-text {
-                    0% {
-                        -moz-transform: translateX(100%);
-                        -webkit-transform: translateX(100%);
-                        transform: translateX(100%);
-                    }
-        
-                    100% {
-                        -moz-transform: translateX(-100%);
-                        -webkit-transform: translateX(-100%);
-                        transform: translateX(-100%);
-                    }
-                }
-                
+      .bounce {
+        width: calc(100% - 110px);
+        height: 40px;
+        overflow: hidden;
+        position: relative;
+        left: 0;
+        p {
+          white-space: nowrap;
+          margin: 12px;
+          font-weight: 400;
+          line-height: 21px;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          -moz-transform: translateX(100%);
+          -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+          -moz-animation: bouncing-text 5s linear infinite alternate;
+          -webkit-animation: bouncing-text 5s linear infinite alternate;
+          animation: bouncing-text 10s linear infinite alternate;
+          @-moz-keyframes bouncing-text {
+            0% {
+              -moz-transform: translateX(100%);
+            }
+            100% {
+              -moz-transform: translateX(-100%);
+            }
+          }
+
+          @-webkit-keyframes bouncing-text {
+            0% {
+              -webkit-transform: translateX(100%);
+            }
+
+            100% {
+              -webkit-transform: translateX(-100%);
+            }
+          }
+
+          @keyframes bouncing-text {
+            0% {
+              -moz-transform: translateX(100%);
+              -webkit-transform: translateX(100%);
+              transform: translateX(100%);
+            }
+
+            100% {
+              -moz-transform: translateX(-100%);
+              -webkit-transform: translateX(-100%);
+              transform: translateX(-100%);
+            }
           }
         }
-        
-    
+      }
+
       a {
         font-weight: 600;
         line-height: 24px;
-        text-decoration: none;
       }
       a,
       p,
