--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -2,6 +2,9 @@ a{
   text-decoration: none;
   color: inherit;
 }
+li{
+  list-style: none;
+}
 .container {
   max-width: 1440px;
   margin-left: auto;
