--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,12 +3,13 @@
 .top_header {
   background-color: #000000;
   height: 48px;
+  position: relative;
   .center_content {
     position: relative;
     display: flex;
     justify-content: center;
     p {
-      margin: 12px;
+      font-size: 12px;
       font-weight: 400;
       line-height: 21px;
     }
@@ -19,7 +20,7 @@
     a,
     p,
     .right_content {
-      font-size: 14px;
+      font-size: 12px;
       color: #fafafa;
     }
   }
@@ -45,37 +46,30 @@
   position: sticky;
   top: 0px;
   z-index: 999;
-  padding-top: 1em;
-  background-color:#fafafa;
-  padding-bottom: 1em;
-  border-bottom: 0.5px solid rgba(0, 0, 0, 1)
-  ;
+  background-color: #fafafa;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 1);
   .content_header {
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-    .left_header {
-      width: 60%;
-      height: 38px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .logo_header {
+      white-space: nowrap;
+    }
+    .navbar_header {
       ul {
+        width: 100%;
         display: flex;
-        li {
-          list-style: none;
-          &:not(:last-child) {
-            margin-right: 48px;
-          }
-        }
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 16px;
       }
     }
+
     .right_header {
-      width: 40%;
       height: 38px;
       gap: 16px;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
       .user {
         position: relative;
@@ -92,12 +86,11 @@
             margin: 0;
             padding: 10px;
             li {
-               
               list-style: none;
               &:not(:last-child) {
                 margin-bottom: 10px;
               }
-              a{
+              a {
                 color: rgba(250, 250, 250, 1);
               }
             }
@@ -106,6 +99,14 @@
         .active_user_dropdown {
           display: block;
         }
+      }
+      .button_menu {
+        display: none;
+      }
+      .box_icon {
+        display: flex;
+        align-items: center;
+        gap: 16px;
       }
     }
   }
@@ -185,5 +186,42 @@
         color: #fafafa;
       }
     }
+  }
+}
+@media (max-width: 760px) {
+  .main_header {
+    height: 65px;
+    padding: 0px 15px;
+    .navbar_header {
+      position: absolute;
+      left: 0;
+      top: 66px;
+      width: 100%;
+      background-color: #fafafa;
+      text-align: center;
+      height: 0;
+      overflow: hidden;
+      transition: 0.5s;
+      ul {
+        padding: 0;
+        flex-direction: column !important;
+        justify-content: space-between !important;
+      }
+    }
+    .navbar_active {
+      height: 150px !important;
+      padding: 20px 0px !important;
+    }
+
+    .right_header {
+      .button_menu {
+        display: block !important;
+      }
+      gap: 10px !important;
+    }
+  }
+
+  .top_header {
+    display: none;
   }
 }
