create slide mobile

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -209,7 +209,7 @@
       }
     }
     .navbar_active {
-      height: 150px !important;
+      height: 100vh !important;
       padding: 20px 0px !important;
     }
 
