--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -1,9 +1,13 @@
 @import "../common//common.scss";
 
 .carousel {
-  width: 800px;
-  padding: 1em;
+  width: calc(100% - 220.5px);
   text-align: center;
+  padding: 20px 20px 0 20px;
+  img{
+    width: 100%;
+    height: 330px;
+    object-fit: cover;}
 }
 .dots {
   li {
@@ -20,4 +24,14 @@
         background-color: red !important;
     }
   }
+}
+@media screen and (max-width: 768px) {
+  .carousel {
+    width: 100%;
+    padding: 0;
+    img{
+      height: 100%;
+    }
+  }
+  
 }
