--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -2,5 +2,11 @@
 @import '../common/common.scss';
 .section1{
     display: flex;
-    flex-direction: row;
 }
+@media screen and (max-width: 768px) {
+    .section1{
+        margin-top: 1em;
+        flex-direction: column;
+    }
+}
+    
