--- a/src/components/slidebar/slidebar.module.scss
+++ b/src/components/slidebar/slidebar.module.scss
@@ -1,9 +1,27 @@
 @import "../common/common.scss";
 .slide_bar {
   width: 200px;
+  height:350px;
+  overflow-y: auto;
   border-right: 0.5px solid rgba(0, 0, 0, 1);
+  &::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+  }
+  
+ &::-webkit-scrollbar
+  {
+    width: 6px;
+    background-color: #F5F5F5;
+  }
+  
+  &::-webkit-scrollbar-thumb
+  {
+    background-color: #000000;
+  }
   ul {
-    padding: 16px 0 16px 0;
+    padding: 20px 0 20px 0;
     margin: 0;
 
     li {
@@ -42,5 +60,10 @@
         display: block;
       }
     }
+  }
+}
+@media screen and (max-width: 768px) {
+  .slide_bar {
+    display: none;
   }
 }
