--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -3,7 +3,7 @@
 .carousel {
   width: calc(100% - 220.5px);
   text-align: center;
-  padding: 20px 20px 0 20px;
+  padding: 20px 0 0 20px;
   img{
     width: 100%;
     height: 330px;
