--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -3,6 +3,11 @@
 .section1{
     display: flex;
 }
+section{
+    &:not(:first-child){
+        margin-bottom: 1em;
+    }
+}
 @media screen and (max-width: 768px) {
     .section1{
         margin-top: 1em;
