--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -1,5 +1,6 @@
 @import '../../components/common/common.scss';
 .about_me{
+    margin-top: 3em;
     .image_content{
         width: 100%;
         
