--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   .center_content {
     position: relative;
-    height: 48px;
+    height: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,6 @@
   .right_content {
     position: absolute;
     right: 0;
-    top: 12px;
     img {
       vertical-align: middle;
       width: 24px;
@@ -51,6 +50,7 @@
   background-color: #fafafa;
   border-bottom: 0.5px solid rgba(0, 0, 0, 1);
   .content_header {
+    padding: 5px 0;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
