--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,4 +1,3 @@
-@import "../common/common.scss";
 // Top Header
 .top_header {
   background-color: #000000;
@@ -61,22 +60,25 @@
       white-space: nowrap;
     }
     .navbar_header {
-      .nav_mobile{
-        display: none;
-      }
       flex-grow: 1;
       order: 1;
-      ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .li_mobile,.account{
+        display: none;
+      }
+      
+      .menu {
         margin: 0;
         display: flex;
         flex-direction: row;
-        justify-content: center;
         gap: 16px;
       }
     }
     .search_bar{
       order: 2;
-      width: 180px;
+      width: 150px;
     }
     .right_header {
       margin-left: 16px;
@@ -85,35 +87,7 @@
       gap: 16px;
       display: flex;
       align-items: center;
-      .user {
-        position: relative;
-        .user_dropdown {
-          background-color: rgba(0, 0, 0, 0.3);
-          margin-top: 2px;
-          border-radius: 4px;
-          display: none;
-          white-space: nowrap;
-          text-align: start;
-          position: absolute;
-          right: 0;
-          ul {
-            margin: 0;
-            padding: 10px;
-            li {
-              list-style: none;
-              &:not(:last-child) {
-                margin-bottom: 10px;
-              }
-              a {
-                color: rgba(250, 250, 250, 1);
-              }
-            }
-          }
-        }
-        .active_user_dropdown {
-          display: block;
-        }
-      }
+      //delete user here
       .button_menu {
         display: none;
       }
@@ -203,38 +177,50 @@
   }
 }
 @media (max-width: 760px) {
-  .main_header {
+  .content_header {
+    .logo_header{
+      margin: 0;
+    }
     .navbar_header {
-      .nav_mobile{
+      display: block !important;
+      .li_mobile ,.account{
         display: block !important;
+      }
+      .li_pc{
+        display: none;
       }
       position: absolute;
       left: 0;
-      top: 60px;
+      top: 48.5px;
       width: 100%;
       background-color: #fafafa;
-      text-align: center;
       height: 0;
       overflow: hidden;
       transition: 0.5s;
-      ul {
-        padding: 0;
+      .menu {
+        padding: 20px 0 0 20px;
         flex-direction: column !important;
         justify-content: space-between !important;
+      }
+      .account{
+        margin: 10px 0 0 0 ;
+        padding: 0 0 0 20px;
       }
     }
    
     .navbar_active {
       height: 100vh !important;
-      padding: 20px 0px !important;
+      
     }
-.content_header{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+
+.search_bar{
+  flex-grow: 1;
+  justify-content: center;
+  padding-left: 16px;
 }
     .right_header {
       .box_icon{
-        .wishlist,.user{
+        .wishlist,.account{
           display: none;
         }
       }
