--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -1,20 +1,3 @@
-.input {
-    width: 50px;
-    height: 323434px;
-}
-
-.border {
-    display: inline-block;
-    width: 4700px;
-    height: 324px;
-    border-radius: 4px;
-    border: 1.5px;
-    background: #000000;
-    border: 1.5px solid #000000;
-    .text {
-        width: 100px;
-        height: 28px;
-        top: 32px;
-        left: 24px;
-    }
+img {
+    width: 20;
 }
