--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -1,36 +1,21 @@
-
 .carousel {
   width: calc(100% - 220.5px);
   text-align: center;
-  padding: 20px 0 0 20px;
-  img{
-    width: 100%;
-    height: 330px;
-    object-fit: cover;}
-}
-.dots {
-  li {
-    width: 10px !important;
-    height: 10px !important;
-    button {
-      width: 10px !important;
-      height: 10px !important;
-      border-radius: 50% !important;
-    }
-  }
-  .slick-active {
-    button{
-        background-color: red !important;
-    }
+  padding: 32px 0 0 32px;
+
+  button {
+    width: 14px !important;
+    height: 14px !important;
+    border-radius: 50%;
+    box-sizing: border-box;
+    margin-left: 5px !important;
+    margin-right: 5px !important;
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 991px) {
   .carousel {
     width: 100%;
     padding: 0;
-    img{
-      height: 100%;
-    }
   }
-  
 }
