--- a/src/components/slidebar/slidebar.module.scss
+++ b/src/components/slidebar/slidebar.module.scss
@@ -1,27 +1,23 @@
-
 .slide_bar {
-  width: 200px;
-  height:350px;
+  width: 260px;
+  height: 375px;
   overflow-y: auto;
   border-right: 0.5px solid rgba(0, 0, 0, 1);
-  &::-webkit-scrollbar-track
-  {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
   }
-  
- &::-webkit-scrollbar
-  {
+
+  &::-webkit-scrollbar {
     width: 6px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
   }
-  
-  &::-webkit-scrollbar-thumb
-  {
+
+  &::-webkit-scrollbar-thumb {
     background-color: #000000;
   }
   ul {
-    padding: 20px 0 20px 0;
+    padding: 32px 0 32px 0;
     margin: 0;
 
     li {
@@ -54,7 +50,6 @@
       .dropdown {
         display: none;
         margin-left: 10px;
-        
       }
       .active_dropdown {
         display: block;
@@ -62,6 +57,13 @@
     }
   }
 }
+@media (min-width: 768px) and (max-width: 991px) {
+  .slide_bar {
+    height: 344px;
+    width: 230px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .slide_bar {
     display: none;
