--- a/src/components/Cart/cart.module.scss
+++ b/src/components/Cart/cart.module.scss
@@ -55,6 +55,12 @@
     gap: 80px;
 }
 
+container1 {
+    overflow-x: auto;
+    background-color: lightblue;
+    width: 40px;
+}
+
 .row_category {
     display: flex;
     width: 1170px;
@@ -120,6 +126,7 @@
     border-width: 1.25px;
     margin: 0px 8px 0px 0px;
     align-items: center;
+    align-items: center;
 }
 
 .detail_product {
@@ -129,6 +136,9 @@
 .detail_price {
     height: 50px;
     width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .detail_quantity {
@@ -139,11 +149,17 @@
 .detail_subtotal {
     height: 50px;
     width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .detail_operation {
     height: 50px;
     width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .return {
@@ -250,4 +266,28 @@ input[type="number"] {
     width: 32px;
     height: 32px;
     background-color: #db4444;
+}
+
+.smartphone {
+    position: relative;
+    width: 360px;
+    height: 640px;
+    margin: auto;
+    border: 16px black solid;
+    border-top-width: 60px;
+    border-bottom-width: 60px;
+    border-radius: 36px;
+}
+
+.smartphone:before {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 5px;
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #333;
+    border-radius: 10px;
 }
